--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   rtmp_tencent_live: ^0.0.7+3
   permission_handler: ^5.0.1+1
+  dio: ^3.0.9
 
 dev_dependencies:
   flutter_test:
